--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,8 +3,11 @@ name = "angrycat"
 version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
-requires-python = ">=3.13"
-dependencies = []
+requires-python = ">=3.11"
+dependencies = [
+    "keystone-engine>=0.9.2",
+    "requests>=2.32.5",
+]
 
 [project.scripts]
 manual_send = "angrycat.tools.manual_send:main"
