--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.11"
 dependencies = [
     "keystone-engine>=0.9.2",
     "requests>=2.32.5",
+    "zenutils",
 ]
 
 [project.scripts]
@@ -22,3 +23,6 @@ packages = ["src/angrycat"]
 
 [tool.hatch.build.targets.wheel.sources]
 "testsetups" = "src/angrycat/testsetup/testsetups"
+
+[tool.uv.sources]
+zenutils = { git = "https://github.com/AngryUEFI/ZenUtils" }
